examples/datalog/18_advanced_patterns/100_conditional_aggregation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cond_agg
Knowledge graph 'test_cond_agg' created.
Switched to knowledge graph: test_cond_agg
> .kg use test_cond_agg
Switched to knowledge graph: test_cond_agg
> +orders[(1, "A", 100), (2, "B", 200), (3, "A", 150), (4, "B", 50)].
Inserted 4 fact(s) into 'orders'.
> large_order_total(<SUM:Amount>) :- orders(_, _, Amount), Amount > 100.
Script error: Parse error: Unknown aggregate function: 
