examples/datalog/18_advanced_patterns/100_conditional_aggregation.dl
% Test: Conditional aggregation
% Expected: Aggregate with filter condition
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_cond_agg
.kg use test_cond_agg

+orders[(1, "A", 100), (2, "B", 200), (3, "A", 150), (4, "B", 50)].

% Sum only orders > 100
large_order_total(<SUM:Amount>) :- orders(_, _, Amount), Amount > 100.

% Count orders per category where amount > 75
count_large_per_cat(Cat, <COUNT:Id>) :- orders(Id, Cat, Amount), Amount > 75.

?- large_order_total(T).
?- count_large_per_cat(Cat, N).

.kg use default
.kg drop test_cond_agg
